# cribs

./: .gitignore  README.md  config.py  main.py  pyproject.toml  s01_preprocess.py  s02_data_split.py
data/clean/: apartment-data.csv  house-data.csv  land-data.csv
data/cross-val/: folds_data.pkl  folds_land.pkl
eda-visualization/: viz-apartment.ipynb  viz-house.ipynb  viz-land.ipynb
models/: random_forest.py
src/: compare_real_estate.py  logger.py  plot_comparison.py  preprocess_functions.py
